3-tier-alb/ui-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-ui
  template:
    metadata:
      labels:
        app: react-ui
    spec:
      containers:
        - name: nginx
          image: pranavjames/app-ui
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-ui-service
spec:
  selector:
    app: react-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
